--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,140 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:weightSum="10"
+    android:orientation="vertical"
+    tools:context=".MainActivity"
+    android:background="#F7BDBDBD"
+    >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:weightSum="8"
+        android:padding="12sp"
+        >
+
+        <ImageView
+            android:layout_weight="1"
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/listicon"
+            android:layout_margin="7sp"
+            android:clickable="true"
+            />
+        <ImageView
+            android:layout_width="0sp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            />
+        <ImageView
+            android:layout_weight="2"
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/pureplaylogo"
+            />
+        <ImageView
+            android:layout_width="0sp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            />
+        <ImageView
+            android:layout_weight="1"
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/user"
+            android:layout_margin="7sp"
+            />
+
+    </LinearLayout>
+
+
+    <<LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        android:layout_weight="7"
+        >
+
+      <androidx.cardview.widget.CardView
+
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          >
+          <ImageView
+              android:layout_width="wrap_content"
+              android:layout_height=""
+      </androidx.cardview.widget.CardView>
+
+    </LinearLayout>>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        >
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Song Name"
+            android:textSize="30sp"
+            />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:weightSum="8"
+        >
+
+        <ImageView
+            android:layout_weight="2"
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+
+            />
+        <ImageView
+            android:layout_width="0sp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rewindbutton"
+            android:layout_margin="7sp"
+            android:clickable="true"
+            />
+        <ImageView
+            android:layout_weight="2"
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/play"
+            />
+        <ImageView
+            android:layout_weight="1"
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/forwardbutton"
+            android:layout_margin="9sp"
+            />
+        <ImageView
+            android:layout_width="0sp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            />
+
+
+    </LinearLayout>
+
+</LinearLayout>
