--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,18 +32,18 @@
             />
         <ImageView
             android:layout_width="0sp"
-            android:layout_weight="2"
+            android:layout_weight="1.5"
             android:layout_height="wrap_content"
             />
         <ImageView
-            android:layout_weight="2"
+            android:layout_weight="3"
             android:layout_width="0sp"
             android:layout_height="wrap_content"
             android:background="@drawable/pureplaylogo"
             />
         <ImageView
             android:layout_width="0sp"
-            android:layout_weight="2"
+            android:layout_weight="1.5"
             android:layout_height="wrap_content"
             />
         <ImageView
@@ -57,21 +57,17 @@
     </LinearLayout>
 
 
-    <<LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0sp"
         android:layout_weight="7"
         >
 
-      <androidx.cardview.widget.CardView
-
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          >
-          <ImageView
-              android:layout_width="wrap_content"
-              android:layout_height=""
-      </androidx.cardview.widget.CardView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
 
     </LinearLayout>>
 
