--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -112,6 +112,7 @@
             android:clickable="true"
             />
         <ImageView
+            android:id="@+id/btn_play"
             android:layout_weight="2"
             android:layout_width="0sp"
             android:layout_height="wrap_content"
