--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,142 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="10"
-    android:orientation="vertical"
-    tools:context=".MainActivity"
-    android:background="#F7BDBDBD"
+
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:id="@+id/drawerLayout"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+xmlns:tools="http://schemas.android.com/tools"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+tools:openDrawer="start"
+android:fitsSystemWindows="true"
+tools:context=".MainActivity"
     >
 
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/main"
         android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:weightSum="8"
-        android:padding="12sp"
-        >
-
-        <ImageView
-            android:layout_weight="1"
-            android:layout_width="0sp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/listicon"
-            android:layout_margin="7sp"
-            android:clickable="true"
-            />
-        <ImageView
-            android:layout_width="0sp"
-            android:layout_weight="1.5"
-            android:layout_height="wrap_content"
-            />
-        <ImageView
-            android:layout_weight="3"
-            android:layout_width="0sp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/pureplaylogo"
-            />
-        <ImageView
-            android:layout_width="0sp"
-            android:layout_weight="1.5"
-            android:layout_height="wrap_content"
-            />
-        <ImageView
-            android:layout_weight="1"
-            android:layout_width="0sp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/user"
-            android:layout_margin="7sp"
-            />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="7"
-        >
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
-
-    </LinearLayout>>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="1"
-        android:orientation="horizontal"
+        android:layout_height="match_parent"
+        android:weightSum="10"
+        android:orientation="vertical"
+        tools:context=".MainActivity"
         android:background="#F7BDBDBD"
-
         >
 
-
-        <TextView
-            android:id="@+id/tv_currentSong"
+        <LinearLayout
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Song Name"
-            android:textSize="30sp"
-            />
+            android:layout_height="0sp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:weightSum="8"
+            android:padding="12sp"
+            >
 
+            <ImageView
+                android:id="@+id/img_btn_drawer"
+                android:layout_weight="1"
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/listicon"
+                android:layout_margin="7sp"
+                android:clickable="true"
+                />
+            <ImageView
+                android:layout_width="0sp"
+                android:layout_weight="1.5"
+                android:layout_height="wrap_content"
+                />
+            <ImageView
+                android:layout_weight="3"
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/pureplaylogo"
+                />
+            <ImageView
+                android:layout_width="0sp"
+                android:layout_weight="1.5"
+                android:layout_height="wrap_content"
+                />
+            <ImageView
+                android:layout_weight="1"
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/user"
+                android:layout_margin="7sp"
+                />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
+            android:layout_weight="7"
+            >
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+        </LinearLayout>>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:background="#F7BDBDBD"
+
+            >
+
+
+            <TextView
+                android:id="@+id/tv_currentSong"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Song Name"
+                android:textSize="30sp"
+                />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:weightSum="8"
+            android:layout_marginBottom="12sp"
+            android:background="#F7BDBDBD"
+
+            >
+
+            <ImageView
+                android:layout_weight="2"
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+
+                />
+            <ImageView
+                android:layout_width="0sp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rewindbutton"
+                android:layout_margin="5sp"
+                android:clickable="true"
+                />
+            <ImageView
+                android:id="@+id/btn_play"
+                android:layout_weight="2"
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/play"
+                />
+            <ImageView
+                android:layout_weight="1"
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/forwardbutton"
+                android:layout_margin="7sp"
+                />
+            <ImageView
+                android:layout_width="0sp"
+                android:layout_weight="2"
+                android:layout_height="wrap_content"
+                />
+
+
+        </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        android:weightSum="8"
-        android:layout_marginBottom="12sp"
-        android:background="#F7BDBDBD"
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/header_layout"
+        app:menu="@menu/menu_layout"
+        />
 
-        >
+<!--    layout gravity and fitsystemwindows and context is must important-->
 
-        <ImageView
-            android:layout_weight="2"
-            android:layout_width="0sp"
-            android:layout_height="wrap_content"
-
-            />
-        <ImageView
-            android:layout_width="0sp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rewindbutton"
-            android:layout_margin="5sp"
-            android:clickable="true"
-            />
-        <ImageView
-            android:id="@+id/btn_play"
-            android:layout_weight="2"
-            android:layout_width="0sp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/play"
-            />
-        <ImageView
-            android:layout_weight="1"
-            android:layout_width="0sp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/forwardbutton"
-            android:layout_margin="7sp"
-            />
-        <ImageView
-            android:layout_width="0sp"
-            android:layout_weight="2"
-            android:layout_height="wrap_content"
-            />
-
-
-    </LinearLayout>
-
-</LinearLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
