--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -123,6 +123,7 @@ tools:context=".MainActivity"
 
                 />
             <ImageView
+                android:id="@+id/btn_prev"
                 android:layout_width="0sp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
@@ -136,13 +137,16 @@ tools:context=".MainActivity"
                 android:layout_width="0sp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/play"
+                android:clickable="true"
                 />
             <ImageView
+                android:id="@+id/btn_next"
                 android:layout_weight="1"
                 android:layout_width="0sp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/forwardbutton"
                 android:layout_margin="7sp"
+                android:clickable="true"
                 />
             <ImageView
                 android:layout_width="0sp"
