--- a/app/src/main/res/layout/songs_row.xml
+++ b/app/src/main/res/layout/songs_row.xml
@@ -44,8 +44,8 @@
                     android:layout_width="0sp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="00:00"
-                    android:textSize="20sp"
+                    android:text="00:00/00:00"
+                    android:textSize="14sp"
                     android:gravity="center"
                     />
 
