--- a/app/src/main/res/layout/activity_music_details.xml
+++ b/app/src/main/res/layout/activity_music_details.xml
@@ -121,6 +121,7 @@
                 />
 
             <TextView
+                android:id="@+id/songTime"
                 android:layout_weight="0.4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
