--- a/app/src/main/res/menu/menu_layout.xml
+++ b/app/src/main/res/menu/menu_layout.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/menu_playlist"
+    <item android:id="@+id/menu_Register"
+        android:title="Register"
+        android:icon="@drawable/playlist"
+        />
+
+     <item android:id="@+id/menu_playlist"
         android:title="Playlists"
         android:icon="@drawable/playlist"
         />
